--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,20 @@
 #container {
-    
-    width: 100px;
-    height: 100px;
+    box-sizing: border-box;
+    margin: 20px;
+    width: 400px;
+    height: 400px;
 }
 #container>div {
    
     display: flex;
+    justify-content: center;
+ 
     
 
 }
 div .box {
-     border: .5px solid green;
-     width: 5px;
-     height: 5px;
+     border: 1px solid green;
+     width: 20px;
+     height: 20px;
      
 }
