--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,31 @@
 #container {
     box-sizing: border-box;
-    margin: 20px;
+    border: 1px solid black;
     width: 400px;
     height: 400px;
+    display: flex;
+    
+    
 }
+
 #container>div {
    
-    display: flex;
-    justify-content: center;
- 
-    
+   display: flex;
+   flex-direction: column;
+   flex: auto;
 
 }
+
 div .box {
-     border: 1px solid green;
-     width: 20px;
+     border: 1px solid black;
+     width: auto;
      height: 20px;
-     
+     flex: auto;
+}
+
+#forButton {
+    display: flex;
+    justify-content: center;
+    width: 400px;
+    margin-bottom: 10px;
 }
